--- a/index.html
+++ b/index.html
@@ -1,215 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zimo Li - Computational Neuroscientist</title>
-    <style>
-        :root {
-            --primary-color: #2c3e50;
-            --secondary-color: #34495e;
-            --text-color: #333;
-            --light-bg: #f5f6fa;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            color: var(--text-color);
-        }
-
-        header {
-            background-color: var(--primary-color);
-            color: white;
-            text-align: center;
-            padding: 3rem 0;
-        }
-
-        nav {
-            background-color: var(--secondary-color);
-            padding: 1rem;
-            position: sticky;
-            top: 0;
-            z-index: 100;
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin: 0 1rem;
-            font-weight: 500;
-        }
-
-        .container {
-            max-width: 1000px;
-            margin: 0 auto;
-            padding: 2rem;
-        }
-
-        section {
-            margin-bottom: 3rem;
-            padding: 2rem;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-
-        .publication {
-            margin-bottom: 1.5rem;
-            padding-bottom: 1.5rem;
-            border-bottom: 1px solid #eee;
-        }
-
-        .research-item {
-            margin-bottom: 2rem;
-        }
-
-        .contact-info {
-            display: flex;
-            justify-content: center;
-            gap: 2rem;
-            margin-top: 1rem;
-        }
-
-        .contact-info a {
-            color: white;
-            text-decoration: none;
-        }
-
-        footer {
-            background-color: var(--primary-color);
-            color: white;
-            text-align: center;
-            padding: 1rem;
-            margin-top: 2rem;
-        }
-
-        .publication-links {
-            margin-top: 1rem;
-        }
-
-        .pdf-link {
-            color: #3498db;
-            text-decoration: none;
-            margin-left: 0.5rem;
-        }
-
-        .pdf-link:hover {
-            text-decoration: underline;
-        }
-
-        .code-link {
-            color: #2ecc71;  /* Different color from PDF links */
-            text-decoration: none;
-            margin-left: 0.5rem;
-        }
-
-        .code-link:hover {
-            text-decoration: underline;
-        }
-
-        @media (max-width: 768px) {
-            .container {
-                padding: 1rem;
-            }
-            
-            nav {
-                padding: 0.5rem;
-            }
-            
-            nav a {
-                margin: 0 0.5rem;
-            }
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>Zimo Li</h1>
-        <p>MSci Neuroscience Student at University College London</p>
-        <div class="contact-info">
-            <a href="mailto:zimo.li.20@ucl.ac.uk">zimo.li.20@ucl.ac.uk</a>
-            <span>|</span>
-            <a href="tel:+447536954028">+44 (0)7536954028</a>
-        </div>
-    </header>
-
-    <nav>
-        <a href="#education">Education</a>
-        <a href="#publications">Publications</a>
-        <a href="#research">Research</a>
-        <a href="#awards">Awards</a>
-        <a href="#skills">Skills</a>
-    </nav>
-
-    <div class="container">
-        <section id="education">
-            <h2>Education</h2>
-            <h3>University College London</h3>
-            <p><strong>MSci Neuroscience</strong> | September 2021 - Present</p>
-            <p>Grade: 78.2% (= 4.0 WES GPA)</p>
-            <p><strong>Core Modules:</strong> Statistical Machine Learning, Neuroinformatics, Theoretical Neuroscience (Audit), Advanced Linear Algebra, Neural Computation, Cellular Basis of Brain Function, Computational Cell Biophysics, Cellular Neurophysiology, Human Neuroanatomy, Control and Movement</p>
-        </section>
-
-        <section id="publications">
-            <h2>Publications and Posters</h2>
-            <div class="publication">
-                <p>Campagner, D., Bhagat, J., Lopes, G., Calcaterra, L., Ahn, J., Almeida, A., Carvalho, F. J., Cruz, B., Erskine, A., Foslz, O., Li, Z., Lo, C., Nguyen, T., Pouget, A., Rapela, J., Reggiani, J., Ryan, T., SWC Foraging Working Group. Aeon: an open-source platform to study the neural basis of ethological behaviours over naturalistic timescales. (2024) Society for Neuroscience, October 5th, Chicago, U.S..</p>
-            </div>
-            <div class="publication">
-                <p>Li, Z., Rapela, J., Campagner, D., SWC Foraging Working Group, and Sahani, M. Statistical Analysis of Naturalistic Long-Duration Mice Foraging Behaviour. (2024) Shenoy Undergraduate Research Fellowship in Neuroscience (SURFiN) Symposium, April 15th, New York City, U.S..
-                    <a href="materials/202404_Poster_SURFiN.pdf" class="pdf-link" target="_blank">[PDF]</a> </p>
-            </div>
-        </section>
-
-        <section id="research">
-            <h2>Research Experience</h2>
-            <div class="research-item">
-                <h3>Temporal Dynamics of On- and Off-Responses in Auditory Cortex during Gap Detection: A Population Analysis and Modeling Approach</h3>
-                <p><em>September 2024 - Present</em></p>
-                <p>Supervised by Professor Maneesh Sahani, Gatsby Computational Neuroscience Unit and Professor Jennifer Linden, UCL Ear Institute</p>
-                <p><a href="https://github.com/zimoli02/gap_in_noise.git" class="code-link" target="_blank">[Code]</a></p>
-            </div>
-            <div class="research-item">
-                <h3>Statistical Analysis on Naturalistic Long-Duration Mouse Foraging Data</h3>
-                <p><em>September 2023 - Present</em></p>
-                <p>Supervised by Professor Maneesh Sahani and Dr Joaquin Rapela, Gatsby Computational Neuroscience Unit</p>
-                <p>Applied advanced statistical methods to characterize mice naturalistic behavior in continual experiments lasting several days. Used linear dynamical systems to infer mice kinematics from position observations, hidden Markov models to infer discrete states from kinematics and other measurements, and linear regression to relate state occupancy to behavioral events. Found that mice kinematics were substantially more active in the first experimental day, repeatable sequences of behavioral states across sessions and mice, and that foraging events were predictable from the inferred states. Assisting with monitoring mice foraging experiments.
-                    <a href="https://github.com/zimoli02/2023-2024-SURFiN-Foraging-Project.git" class="code-link" target="_blank">[Code]</a>
-                </p>
-            </div>
-            <div class="research-item">
-                <h3>Short-Term Synaptic Plasticity in Cerebellar Information Processing</h3>
-                <p><em>October 2023 - March 2024</em></p>
-                <p>Supervised by Professor R. Angus Silver, Silver Lab</p>
-                <p>Conducted a 7500-word literature review on the mechanism and functional roles of short-term synaptic plasticity in the cerebellar cortical circuit.
-                    <a href="materials/202404_Poster_ReviewSTP.pdf" class="pdf-link" target="_blank">[PDF]</a>
-                </p>
-            </div>
-        </section>
-
-        <section id="awards">
-            <h2>Awards and Honors</h2>
-            <ul>
-                <li>Shenoy Undergraduate Research Fellowship in Neuroscience, Simons Foundation (September, 2023)</li>
-                <li>Dean's List, Academic Year 2023-2024 (September, 2024)</li>
-                <li>Dean's List, Academic Year 2022-2023 (November, 2023)</li>
-            </ul>
-        </section>
-
-        <section id="skills">
-            <h2>Skills</h2>
-            <p><strong>Languages:</strong> English (fluent), Mandarin (native)</p>
-            <p><strong>Programming Languages:</strong> Python, C++, MATLAB</p>
-            <p><strong>Animal Handling Skills:</strong> UK Certified Personal License (PIL A, B, C)</p>
-            <p><strong>Simulation Tools:</strong> XPP, Neuron</p>
-        </section>
-    </div>
-
-    <footer>
-        <p>&copy; 2024 Zimo Li</p>
-    </footer>
-</body>
-</html>
+version https://git-lfs.github.com/spec/v1
+oid sha256:6d7840858a0bbec574a305bb6a0841eabbf1c32784719ed01168ab674be8473b
+size 8478
