--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Times New Roman', Times, serif;
             line-height: 1.6;
             margin: 0;
             padding: 0;
@@ -128,9 +128,21 @@
 <body>
     <header>
         <h1>Zimo Li</h1>
-        <p>MSci Neuroscience Student at University College London</p>
         <div class="contact-info">
-            <a href="mailto:zimo.li.20@ucl.ac.uk">zimo.li.20@ucl.ac.uk</a>
+            <a href="mailto:zimo.li.20@ucl.ac.uk" title="Email">
+                <!-- Email icon SVG -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" viewBox="0 0 24 24" style="vertical-align:middle;margin-right:6px;">
+                    <path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 2v.01L12 13 4 6.01V6h16zM4 20v-9.99l7.29 6.71c.39.36 1.02.36 1.41 0L20 10.01V20H4z"/>
+                </svg>
+                zimo.li.20@ucl.ac.uk
+            </a>
+            <a href="https://github.com/zimoli02" target="_blank" title="GitHub">
+                <!-- GitHub icon SVG -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" viewBox="0 0 24 24" style="vertical-align:middle;margin-right:6px;">
+                    <path d="M12 2C6.48 2 2 6.58 2 12.26c0 4.5 2.87 8.32 6.84 9.67.5.09.68-.22.68-.48 0-.24-.01-.87-.01-1.7-2.78.61-3.37-1.36-3.37-1.36-.45-1.17-1.1-1.48-1.1-1.48-.9-.63.07-.62.07-.62 1 .07 1.53 1.05 1.53 1.05.89 1.56 2.34 1.11 2.91.85.09-.66.35-1.11.63-1.37-2.22-.26-4.56-1.14-4.56-5.07 0-1.12.39-2.03 1.03-2.75-.1-.26-.45-1.3.1-2.7 0 0 .84-.28 2.75 1.05A9.38 9.38 0 0 1 12 6.84c.85.004 1.71.11 2.51.32 1.91-1.33 2.75-1.05 2.75-1.05.55 1.4.2 2.44.1 2.7.64.72 1.03 1.63 1.03 2.75 0 3.94-2.34 4.81-4.57 5.07.36.32.68.94.68 1.9 0 1.37-.01 2.47-.01 2.81 0 .27.18.58.69.48A10.01 10.01 0 0 0 22 12.26C22 6.58 17.52 2 12 2z"/>
+                </svg>
+                https://github.com/zimoli02
+            </a>
         </div>
     </header>
 
@@ -154,6 +166,9 @@
         <section id="publications">
             <h2>Publications and Posters</h2>
             <div class="publication">
+                <p>Bhagat, J., Campagner, D., Lopes, G., Calcaterra, L.,Almeida, A., Lo, C., Nguyen, T., Pouget, A., Ryan, T., Marin, M., Ahn, J., Carvalho, F. J., Cruz, B., Erskine, A., Foslz, O., Li, Z., Rapela, J., Reggiani, J., SWC Foraging Working Group. Aeon: an open -source platform for testing normative models of natural behaviours and their neural implementations. (2025) Computational and Systems Neuroscience (COSYNE), March 27th, Montreal, QC, Canada.</p>
+            </div>
+            <div class="publication">
                 <p>Campagner, D., Bhagat, J., Lopes, G., Calcaterra, L., Ahn, J., Almeida, A., Carvalho, F. J., Cruz, B., Erskine, A., Foslz, O., Li, Z., Lo, C., Nguyen, T., Pouget, A., Rapela, J., Reggiani, J., Ryan, T., SWC Foraging Working Group. Aeon: an open-source platform to study the neural basis of ethological behaviours over naturalistic timescales. (2024) Society for Neuroscience, October 5th, Chicago, U.S..</p>
             </div>
             <div class="publication">
@@ -163,9 +178,9 @@
         </section>
 
         <section id="research">
-            <h2>Research Experience</h2>
+            <h2>Research Project</h2>
             <div class="research-item">
-                <h3>Temporal Dynamics of On- and Off-Responses in Auditory Cortex during Gap Detection: A Population Analysis and Modeling Approach</h3>
+                <h3>Neural Representation for Temporal Dynamics in Auditory Cortex during Gap Detection: A Population Analysis</h3>
                 <p><em>September 2024 - Present</em></p>
                 <p>Supervised by Professor Maneesh Sahani, Gatsby Computational Neuroscience Unit and Professor Jennifer Linden, UCL Ear Institute</p>
                 <p><a href="https://github.com/zimoli02/gap_in_noise.git" class="code-link" target="_blank">[Code]</a></p>
@@ -184,6 +199,13 @@
                 <p>Supervised by Professor R. Angus Silver, Silver Lab</p>
                 <p>Conducted a 7500-word literature review on the mechanism and functional roles of short-term synaptic plasticity in the cerebellar cortical circuit.
                 <a href="https://drive.google.com/file/d/1LhvwRPfzm7FRamoqRhpogMHibRawI5V1/view?usp=drive_link" class="pdf-link" target="_blank">[PDF]</a>
+                </p>
+            </div>
+            <div class="research-item">
+                <h3>Mouse V1 Neuron Patterns in Different Luminance Levels</h3>
+                <p><em>May 2022 - October 2023</em></p>
+                <p>Supervised by Professor Kenneth Harris and Dr Maxwell Shinn, Harris/Carandini Lab</p>
+                <p>Performed dimensionality analysis on 2-photon calcium imaging neural data to explore the possible factors of mouse V1 neuron pattern distinction in different light conditions. Proposed a dynamical systems model of mice cortical neural circuit to predict high-dimensional neuronal activities during locomotion. The influence of ambient light on the cor- relation between locomotion and neural activities can be simulated by altering the dynamics of the modelled cortical neural network.
                 </p>
             </div>
         </section>
