--- a/project.html
+++ b/project.html
@@ -125,7 +125,7 @@
             <li><a href="index.html">Bio</a></li>
             <li><a href="publication.html">Publication</a></li>
             <li><a href="project.html">Project</a></li>
-            <li><a href="https://drive.google.com/drive/u/0/folders/1Xlskf3PJkSMDDdmPcmuY930On9tfCKEe" target="_blank">CV</a></li>
+            <li><a href="cv.html">CV</a></li>
             <li><a href="others.html">Others</a></li>
         </ul>
     </nav>
@@ -149,16 +149,41 @@
         </div>
     </header>
     <main>
-        <div class="bio-container">
-            <img src="materials/bio.JPG" alt="Zimo Li" class="bio-photo">
-            <div class="bio-text">
-                <p>
-                    <!-- Your self-intro here -->
-                    Hello! I am Zimo Li, an MSci Neuroscience student at University College London. 
-                    My research interests include computational neuroscience, statistical modeling of behavior, and neural data analysis. 
-                    I am passionate about understanding brain function through data-driven approaches and developing open-source tools for neuroscience research.
+        <div class="container">
+
+        <section id="research">
+            <h2>Research Project</h2>
+            <div class="research-item">
+                <h3>Neural Representation for Temporal Dynamics in Auditory Cortex during Gap Detection: A Population Analysis</h3>
+                <p><em>September 2024 - Present</em></p>
+                <p>Supervised by Professor Maneesh Sahani, Gatsby Computational Neuroscience Unit and Professor Jennifer Linden, UCL Ear Institute</p>
+                <p><a href="https://github.com/zimoli02/gap_in_noise.git" class="code-link" target="_blank">[Code]</a></p>
+            </div>
+            <div class="research-item">
+                <h3>Statistical Analysis on Naturalistic Long-Duration Mouse Foraging Data</h3>
+                <p><em>September 2023 - Present</em></p>
+                <p>Supervised by Professor Maneesh Sahani and Dr Joaquin Rapela, Gatsby Computational Neuroscience Unit</p>
+                <p>Applied advanced statistical methods to characterize mice naturalistic behavior in continual experiments lasting several days. Used linear dynamical systems to infer mice kinematics from position observations, hidden Markov models to infer discrete states from kinematics and other measurements, and linear regression to relate state occupancy to behavioral events. Found that mice kinematics were substantially more active in the first experimental day, repeatable sequences of behavioral states across sessions and mice, and that foraging events were predictable from the inferred states. Assisting with monitoring mice foraging experiments.
+                <a href="https://github.com/zimoli02/2023-2024-SURFiN-Foraging-Project.git" class="code-link" target="_blank">[Code]</a>
                 </p>
             </div>
+            <div class="research-item">
+                <h3>Short-Term Synaptic Plasticity in Cerebellar Information Processing</h3>
+                <p><em>October 2023 - March 2024</em></p>
+                <p>Supervised by Professor R. Angus Silver, Silver Lab</p>
+                <p>Conducted a 7500-word literature review on the mechanism and functional roles of short-term synaptic plasticity in the cerebellar cortical circuit.
+                <a href="https://drive.google.com/file/d/1LhvwRPfzm7FRamoqRhpogMHibRawI5V1/view?usp=drive_link" class="pdf-link" target="_blank">[PDF]</a>
+                </p>
+            </div>
+            <div class="research-item">
+                <h3>Mouse V1 Neuron Patterns in Different Luminance Levels</h3>
+                <p><em>May 2022 - October 2023</em></p>
+                <p>Supervised by Professor Kenneth Harris and Dr Maxwell Shinn, Harris/Carandini Lab</p>
+                <p>Performed dimensionality analysis on 2-photon calcium imaging neural data to explore the possible factors of mouse V1 neuron pattern distinction in different light conditions. Proposed a dynamical systems model of mice cortical neural circuit to predict high-dimensional neuronal activities during locomotion. The influence of ambient light on the cor- relation between locomotion and neural activities can be simulated by altering the dynamics of the modelled cortical neural network.
+                </p>
+            </div>
+        </section>
+        
         </div>
     </main>
     <footer>
