--- a/publication.html
+++ b/publication.html
@@ -125,7 +125,7 @@
             <li><a href="index.html">Bio</a></li>
             <li><a href="publication.html">Publication</a></li>
             <li><a href="project.html">Project</a></li>
-            <li><a href="https://drive.google.com/drive/u/0/folders/1Xlskf3PJkSMDDdmPcmuY930On9tfCKEe" target="_blank">CV</a></li>
+            <li><a href="cv.html">CV</a></li>
             <li><a href="others.html">Others</a></li>
         </ul>
     </nav>
@@ -149,16 +149,21 @@
         </div>
     </header>
     <main>
-        <div class="bio-container">
-            <img src="materials/bio.JPG" alt="Zimo Li" class="bio-photo">
-            <div class="bio-text">
-                <p>
-                    <!-- Your self-intro here -->
-                    Hello! I am Zimo Li, an MSci Neuroscience student at University College London. 
-                    My research interests include computational neuroscience, statistical modeling of behavior, and neural data analysis. 
-                    I am passionate about understanding brain function through data-driven approaches and developing open-source tools for neuroscience research.
-                </p>
+        <div class="container">
+
+        <section id="publications">
+            <h2>Publications and Posters</h2>
+            <div class="publication">
+                <p>Bhagat, J., Campagner, D., Lopes, G., Calcaterra, L.,Almeida, A., Lo, C., Nguyen, T., Pouget, A., Ryan, T., Marin, M., Ahn, J., Carvalho, F. J., Cruz, B., Erskine, A., Foslz, O., Li, Z., Rapela, J., Reggiani, J., SWC Foraging Working Group. Aeon: an open -source platform for testing normative models of natural behaviours and their neural implementations. (2025) Computational and Systems Neuroscience (COSYNE), March 27th, Montreal, QC, Canada.</p>
             </div>
+            <div class="publication">
+                <p>Campagner, D., Bhagat, J., Lopes, G., Calcaterra, L., Ahn, J., Almeida, A., Carvalho, F. J., Cruz, B., Erskine, A., Foslz, O., Li, Z., Lo, C., Nguyen, T., Pouget, A., Rapela, J., Reggiani, J., Ryan, T., SWC Foraging Working Group. Aeon: an open-source platform to study the neural basis of ethological behaviours over naturalistic timescales. (2024) Society for Neuroscience, October 5th, Chicago, U.S..</p>
+            </div>
+            <div class="publication">
+                <p>Li, Z., Rapela, J., Campagner, D., SWC Foraging Working Group, and Sahani, M. Statistical Analysis of Naturalistic Long-Duration Mice Foraging Behaviour. (2024) Shenoy Undergraduate Research Fellowship in Neuroscience (SURFiN) Symposium, April 15th, New York City, U.S..
+                    <a href="https://drive.google.com/file/d/10LBPxjHKYmA2uRDX7DnwUl2NYRFTQmDQ/view?usp=drive_link" class="pdf-link" target="_blank">[PDF]</a> </p>
+            </div>
+        </section>
         </div>
     </main>
     <footer>
