--- a/index.html
+++ b/index.html
@@ -119,8 +119,25 @@
                 padding: 1rem;
             }
         }
+
+        .container {
+            max-width: 900px;
+            margin: 3rem auto 2rem auto;
+            padding: 0 1rem;
+        }
+
+        .item {
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.08);
+            margin-bottom: 2rem;
+            padding: 1.5rem 2rem;
+            font-size: 1.1rem;
+        }
+
     </style>
 </head>
+
 <body>
     <div class="menu-hover-zone"></div>
     <nav class="side-menu">
@@ -128,7 +145,7 @@
             <li><a href="index.html">Bio</a></li>
             <li><a href="publication.html">Publication</a></li>
             <li><a href="project.html">Project</a></li>
-            <li><a href="https://drive.google.com/drive/u/0/folders/1Xlskf3PJkSMDDdmPcmuY930On9tfCKEe" target="_blank">CV</a></li>
+            <li><a href="https://drive.google.com/file/d/1o9m9PxVb2czNB3Pk2XQHj08ePnpiFkZu/view?usp=drive_link" target="_blank">CV</a></li>
             <li><a href="others.html">Others</a></li>
         </ul>
     </nav>
